# skills-test

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.airflow  README.md  docker-compose.yml  pyproject.toml
.codex/skills/ml-pipeline-workflow/: SKILL.md
configs/: pipeline.yaml
deploy/: kubernetes-deployment.yaml
frontend/: Dockerfile  app.js  index.html  nginx.conf  styles.css
orchestration/airflow/: churn_training_dag.py
orchestration/kubeflow/: churn_training_pipeline.py
src/churn_ml/: __init__.py  api.py  artifacts.py  cli.py  config.py  data.py  evaluation.py  exceptions.py  inference.py  mlflow_tracking.py  modeling.py  pipeline.py  tracking.py
tests/: conftest.py  test_api.py  test_pipeline.py
